# multipurpose_system

./: Dockerfile  Jenkinsfile  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/controllers/: category_contoller.py  login_controller.py  tasks_controller.py  user_controller.py
app/migrations/: env.py
app/migrations/versions/: 12c3dc523b4e_update_table_task_column_updated_at_for_.py  3bf3b5238f31_update_table_task_column_updated_at_for_.py  4185da8e1122_add_tasks_table.py  8753b222e8dc_add_order_by_desc_in_relation_user_and_.py  9279aebef531_add_table_category.py  a463efc21cc8_add_table_users.py  c3f4468bbb3a_update_name_of_table.py
app/models/: category_models.py  login_models.py  tasks_models.py  user_models.py
app/models/database/: connection.py  models.py  session_db.py
app/routers/: category_router.py  login_router.py  start.py  tasks_router.py  user_router.py
app/schemas/: category_schemas.py  tasks_schemas.py  token_data_schemas.py  user_login_schemas.py  user_schemas.py
app/services/: create_token_services.py  get_current_date_and_time_br_services.py  password_services.py  validator_email_services.py
